--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,8 @@
-<h1>Hello World!</h1>
-<router-outlet></router-outlet>
-<h1>Goodbye World!</h1>
+<div>
+    <!-- Top Navigation -->
+    <app-navigation></app-navigation>
+    <!-- Page Contents -->
+    <div class="page-container">
+        <router-outlet></router-outlet>
+    </div>
+</div>
