--- a/src/app/components/red-card/red-card.component.html
+++ b/src/app/components/red-card/red-card.component.html
@@ -1,5 +1,6 @@
 <div class="card">
-    <div class="card-title">Red Card Title</div>
+    <div class="card-title">{{ title }}</div>
     <div class="card-content">Red Card Content</div>
-    <div class="card-footer">Red Card Footer</div>
+    <div class="primary-btn" (click)="addPerson()">Add Person to Red Card</div>
+    <div class="primary-btn" (click)="deletePerson()">Delete Person from Red Card</div>
 </div>
