--- a/src/app/components/blue-card/blue-card.component.html
+++ b/src/app/components/blue-card/blue-card.component.html
@@ -1,7 +1,7 @@
 <div class="card">
-    <div class="card-title">Blue Card Title</div>
+    <div class="card-title">{{ title }}</div>
     <div class="card-content">Blue Card Content</div>
     <div class="card-footer">
-        <button>Add Person to Blue Card</button>
+      <div class="primary-btn" (click)="addPerson()">Add Person to Blue Card</div>
     </div>
 </div>
